[metadata]
name = pycogent
version = 0.0.1
author = Alex Knyazev
author_email = aknyazev@ucsd.edu
description = Post-processing tools for COGENT plasma simulation code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arknyazev/pycogent
project_urls =
    Bug Tracker = https://github.com/arknyazev/pycogent/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
